css attempt to fix index page overlap

--- a/src/Components/DevCard.css
+++ b/src/Components/DevCard.css
@@ -1,6 +1,3 @@
-/* article img {
-  height: 250px;
-} */
 
 .dev-container article {
   border-radius: 24px;
